# CeraMix

./: .env.example  .gitignore  ABOUT.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: repo-metadata.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
packaging/: PKGBUILD
python/: README.md  build-sidecar.sh  ceramix_engine.spec  requirements.txt
python/ceramix_engine/: __init__.py  audio_io.py  mixer.py  runtime.py  server.py  video_io.py
python/ceramix_engine/models/: __init__.py  downloader.py  registry.py
python/ceramix_engine/processors/: __init__.py  denoise.py  stem_split.py
resources/sample_audio/: README.md
scripts/: setup-arch.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/packaging/: ceramix.desktop
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  backend.rs  mixer.rs  mod.rs  process.rs  video.rs
src/components/FileExplorer/: FileExplorer.tsx
src/components/ProcessingControls/: ProcessingControls.tsx
src/components/ProgressOverlay/: ProgressOverlay.tsx
src/components/StemMixer/: StemMixer.tsx
src/components/VideoPreview/: VideoPreview.tsx
src/components/WaveformEditor/: WaveformEditor.tsx
src/hooks/: useWaveform.ts
src/lib/: ipc.ts
src/store/: useAppStore.ts
src/styles/: index.css
