[package]
name = "ceramix"
version = "0.0.1"
description = "AI audio cleanup, stem splitting, and noise removal."
authors = ["CeraMix contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ceramix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
